@@ -116,7 +116,10 @@ public class UIImage extends UIComponent implements SensorOwner, SensorLinkOwner
       this.sensorLink = new SensorLink();
       this.sensorLink.setSensorDTO(sensorDTO);
     } else {
-       sensorLink.clear();
+      if (sensorLink != null) {
+        sensorLink.clear();
+        sensorLink.setSensorDTO(null);
+      }
     }
  }
 
